#include "DeviceModel.hpp"

DeviceModel::DeviceModel() 
{
}
