#include "IDeviceModel.hpp"

IDeviceModel::IDeviceModel() 
{
}

IDeviceModel::~IDeviceModel() 
{
}
