@startuml

title M50 DEVICE MODELS LAYER

skinparam packageStyle rectangle
skinparam lineThickness 2

class DeviceModelsContext <<M10_Composition>>
{
}

class Dirty 
{
    + IsDirty(): bool
    + MarkDirty()
    + ClearDirty()
    - bool _isDirty
}

class Initializable 
{
    + IsInitialized() : bool
    + MarkInitialized()
    - _isInitialized() : bool
}

class IDeviceModel
{
    + <<abstract>> Initialize()
}

IDeviceModel -u-|> Dirty
IDeviceModel -u-|> Initializable

class DeviceModel 
{
    DeviceModel()
}

DeviceModel -u-|> IDeviceModel

class Ws28xxDeviceModel #lightblue
{
    + RgbStruct { uint8_t green; uint8_t red; uint8_t blue; }
    + Ws28xxDeviceModel()
    + SetNrOfLeds(uint16_t nrOfLeds)
    + SetMaxCurrentConsumption(uint16_t maxCurrentConsumption)
    + Initialize()
    + GetNrOfLeds() : uint16_t
    + SetPixel(uint16_t index, RGB color)
    + IsRgbEqual(RgbStruct a, RgbStruct b)
    + RgbStruct CreateRgb(uint8_t red, uint8_t green, uint8_t blue) const
    + virtual void FillGrbBufferToSend(RgbStruct* rgbBuffer)
    - std::unique_ptr<RgbStruct[]> _leds
    - uint16_t _nrOfLeds
    - uint16_t _maxCurrentConsumption
}

Ws28xxDeviceModel -u-|> DeviceModel

class I2cTaskDelegateDeviceModels #yellow
{
    void Run()
}

class Mcp23017DeviceModel <<I2cTask>> #yellow
{
    + Mcp23017DeviceModel()
    + GetI2cAddress() : uint8_t
    + SetI2cAddress(uint8_t i2cAddress) 
    + SetInputBits(List<uint16_t> inputBits)
    + Initialize()
    + GetInputPinsMask(): uint16_t
    + GetGpioStates() : uint16_t
    + GetInputBit(uint8_t) : bool 
    + SetOutputBit(uint8_t bit, bool state)
    - uint8_t _i2cAddress
    - uint16_t _inputsMask
    - uint16_t _gpioStates
}

Mcp23017DeviceModel -u-|> DeviceModel

class Tm1637DeviceModel <<I2cTask>> #yellow
{
    + <<static>> const uint8_t MAX_NR_OF_DIGITS = 8
    + <<static>> const uint8_t BRIGHTNESS = 0x07
    + ESymbol { Degrees } 
    + Tm1637DeviceModel()
    + GetNrOfDigits() : uint8_t
    + SetNrOfDigits(uint8_t nrOfDigits)
    + Initialize()
    + GetDigit(uint8_t index) : uint8_t
    + SetDigit(uint8_t index, uint8_t value)
    + GetCharacter(uint8_t index) : char
    + SetCharacter(uint8_t index, char character);
    + GetAuxiliarySegment(uint8_t index) bool
    + SetAuxiliarySegment(uint8_t index, bool state)
    + GetSegmentsValue(uint8_t index) : uint8_t
    + IsCharacterDirty(uint8_t index) : bool

private:
    - uint8_t _segmentsTable[256]
    - uint8_t _nrOfDigits
    - char _characters[MAX_NR_OF_DIGITS]
    - bool _dirtyCharacters[MAX_NR_OF_DIGITS]
    - bool _auxiliarySegments[MAX_NR_OF_DIGITS]
    - FillSegmentsTable()
}

Tm1637DeviceModel -u-|> DeviceModel

class Lcd2004DeviceModel <<I2cTask>> #yellow
{
    + Lcd2004DeviceModel()
    + GetI2cAddress(): uint8_t
    + SetI2cAddress(uint8_t i2cAddress)
    + Initialize()
    + GetI2cAddress(): uint8_t
    + SetI2cAddress(uint8_t i2cAddress) 
    + GetPreviousLine(uint8_t lineNumber): string
    + GetLine(uint8_t lineNumber): string
    + SetLine(uint8_t lineNumber, std::string lineContent)
    + IsCursorDirty() : bool
    + ClearCursorDirty();
    + GetDirtyLineNumber() : uint8_t
    + UpdateLine(uint8_t lineIndex)
    + PerCharacterStrategy(uint8_t lineIndex) : bool
    - <<static>> const uint8_t
        FULL_LINE_STRATEGY_CHARACTERS = 17
    - uint8_t _i2cAddress
    - string _previousLines[4]
    - string _lines[4]
    - uint8_t _cursorPositionX
    - uint8_t _cursorPositionY
    - bool _cursorEnabled
    - bool _isCursorDirty
}

Lcd2004DeviceModel -u-|> DeviceModel

DeviceModelsContext *-- Ws28xxDeviceModel
DeviceModelsContext *-- Mcp23017DeviceModel
DeviceModelsContext *-- Tm1637DeviceModel
DeviceModelsContext *-- Lcd2004DeviceModel

I2cTaskDelegateDeviceModels o-- DeviceModelsContext

@enduml
